<?xml version="1.0" encoding="UTF-8"?>
<!--

    Back 2 Browser Bytecode Translator
    Copyright (C) 2012-2018 Jaroslav Tulach <jaroslav.tulach@apidesign.org>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, version 2 of the License.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. Look for COPYING file in the top folder.
    If not, see http://opensource.org/licenses/GPL-2.0.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.apidesign</groupId>
        <artifactId>bck2brwsr</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <groupId>org.apidesign.bck2brwsr</groupId>
    <artifactId>java4graal</artifactId>
    <packaging>jar</packaging>
    <name>Java for Truffle via Bck2Brwsr</name>
    <properties>
        <graalvm.version>19.0.2</graalvm.version>
        <native.image>${java.home}/bin/native-image</native.image>
        <mainClass>org.apidesign.bck2brwsr.truffle.Main</mainClass>
        <binary>${project.build.directory}/${project.artifactId}</binary>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>${mainClass}</mainClass>
                        </transformer>
                    </transformers>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-api</artifactId>
            <version>${graalvm.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apidesign.bck2brwsr</groupId>
            <artifactId>vm4brwsr</artifactId>
            <version>${project.version}</version>
            <type>jar</type>
            <exclusions>
                <exclusion>
                    <groupId>com.google.javascript</groupId>
                    <artifactId>closure-compiler</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-dsl-processor</artifactId>
            <version>${graalvm.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apidesign.bck2brwsr</groupId>
            <artifactId>emul</artifactId>
            <version>${project.version}</version>
            <classifier>bck2brwsr</classifier>
        </dependency>
        <dependency>
            <groupId>org.apidesign.bck2brwsr</groupId>
            <artifactId>emul</artifactId>
            <version>${project.version}</version>
            <classifier>rt</classifier>
        </dependency>
        <dependency>
            <groupId>org.apidesign.bck2brwsr</groupId>
            <artifactId>aot</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js</artifactId>
            <version>${graalvm.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>native-image</id>
            <activation>
                <file>
                    <exists>${native.image}</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <executions>
                            <execution>
                                <id>native-image</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${native.image}</executable>
                                    <arguments>
                                        <argument>--language:js</argument>
                                        <argument>-H:Name=${binary}</argument>
                                        <argument>--allow-incomplete-classpath</argument>
                                        <argument>-cp</argument>
                                        <argument>${project.build.directory}/${project.build.finalName}.jar</argument>
                                        <argument>${mainClass}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>native-test</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${binary}</executable>
                                    <classpathScope>test</classpathScope>
                                    <arguments>
                                        <argument>-cp</argument>
                                        <argument>${project.build.directory}/test-classes</argument>
                                        <argument>org.apidesign.bck2brwsr.truffle.Hello</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>